kustomize/apps/envops/base/envops-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envops
  labels:
    app: envops
spec:
  selector:
    matchLabels:
      app: envops
  template:
    metadata:
      labels:
        app: envops
    spec:
      imagePullSecrets:
      - name: ghcr-ro-secret
      containers:
      - name: envops
        image: ghcr.io/noaa-pmel/msp/envops:0.7.8
        imagePullPolicy: "Always"
        resources:
          requests:
            cpu: "250m"
            memory: "500Mi"
          limits:
            memory: "1Gi"
            cpu: "750m"
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
