kustomize/apps/envops/base/envops-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envops
  labels:
    app: envops
spec:
  selector:
    app: envops
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
